--- a/src/app/profile/homepage/homepage.component.css
+++ b/src/app/profile/homepage/homepage.component.css
@@ -8,7 +8,14 @@
 #head{
     text-align: center;
 }
-
+#addbutton{
+    position: absolute;
+    right: 5%;
+   
+}
+#addbutton:hover{
+    background-color: aliceblue;
+}
 
 
 #event h2{
@@ -57,7 +64,7 @@
  }
  #part3{
     background-color: rgba(247, 247, 247, 0.877);
-    min-height: 750px;  padding: 20px;
+    min-height: 250px;  padding: 20px;
  }
  #part0 h1{
      color: rgb(196,199,199);
