--- a/src/app/events/cricketmatchs/email-alert/email-alert.component.html
+++ b/src/app/events/cricketmatchs/email-alert/email-alert.component.html
@@ -1,12 +1,14 @@
 <app-nav-bar></app-nav-bar>
 
+
 <div class=" col-md-10 container">
 
     <div>
         <br>
-        <h3>Email of {{details.eventname}}...</h3>
+        <h3>Email of Captain Email...</h3>
     </div>
-
+    <button type="button" class="btn btn-success" (click)="composeMail()">Compose Mail</button>
+<br>
     <!-- Start send email -->
     <div class="row">
 
