--- a/src/app/events/cricketmatchs/schedule-view/schedule-view.component.css
+++ b/src/app/events/cricketmatchs/schedule-view/schedule-view.component.css
@@ -1,6 +1,9 @@
 .card{
-    margin: 1em;
+    margin: 1em 0em;
 }
-.card-body{
-    margin: 1em;
+
+#vs{
+    text-align: center;
+    font-size: 2.5em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
