--- a/src/app/events/cricketmatchs/team-form/team-form.component.html
+++ b/src/app/events/cricketmatchs/team-form/team-form.component.html
@@ -3,106 +3,112 @@
 <div id="back">
 
     <div *ngIf="!IsLogin" class="wrapper fadeInDown col-md-12 container">
-        <div id="formContent">
+        <div class="col-lg-10 col-md-6 col-sm-12">
+            <div id="formContent">
 
-            <br>
-            <div class="fadeIn first">
-                <h1>Cricket Team Form</h1>
-            </div>
-            <h5 class="card-title">
-                <h3 id="msg">{{Message}}</h3>
-            </h5>
-
-            <!-- Start Form -->
-            <form [formGroup]="teamForm" autocomplete="off" novalidate (ngSubmit)="teamData(teamForm.value)">
-
-                <div class="form-group row">
-                    <div class="col-10">
-                        <input formControlName="teamName" class="form-control" type="text" id="inputTeamName" required>
-                        <label for="inputTeamName">Team Name :</label>
-                        <!-- <em *ngIf="validateControl('teamName') && hasError('teamName', 'required')">*Team Name is required</em> -->
-                    </div>
+                <br>
+                <div class="fadeIn first">
+                    <h1>Cricket Team Form</h1>
                 </div>
+                <h5 class="card-title">
+                    <h3 id="msg">{{Message}}</h3>
+                </h5>
 
-                <div class="row">
-                    <div class="col-sm-10">
-                        <label for="inputTeamCaptainName">Captain Name : </label>
-                        <div class="row">
-                            <div class="col-9 col-sm-9">
-                                <span class="sp1">
-                                    <div>{{name}}</div>
-                                </span>
-                            </div>
-                            <div class="col-3 col-sm-3">
-                                <button type="button" class="btn btn-link btn-sm" id="btn" (click)="open(content2)">Select
-                                    Captain</button>
+                <!-- Start Form -->
+                <form [formGroup]="teamForm" autocomplete="off" novalidate (ngSubmit)="teamData(teamForm.value)">
+
+                    <div class="form-group row">
+                        <div class="col-10">
+                            <input formControlName="teamName" class="form-control" type="text" id="inputTeamName"
+                                required>
+                            <label for="inputTeamName">Team Name :</label>
+                            <!-- <em *ngIf="validateControl('teamName') && hasError('teamName', 'required')">*Team Name is required</em> -->
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-10">
+                            <label for="inputTeamCaptainName">Captain Name : </label>
+                            <div class="row">
+                                <div class="col-9 col-sm-9">
+                                    <span class="sp1">
+                                        <div>{{name}}</div>
+                                        <!-- <em *ngIf="validateControl('teamMember') && hasError('teamMember', 'required')">*Team Member Name is required</em> -->
+                                    </span>
+                                </div>
+                                <div class="col-3 col-sm-3">
+                                    <button type="button" class="btn btn-link" id="btn" (click)="open(content2)">Select
+                                        Captain</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <hr class="col-10" style="border-color: rgb(141, 13, 30)">
+                    <hr class="col-10" style="border-color: rgb(141, 13, 30)">
 
-                <div class="row">
-                    <div class="col-sm-10">
-                        <label for="inputTeamCaptainName">Team Member : </label>
-                        <div class="row">
-                            <div class="col-9 col-sm-9">
-                                <span class="sp1">
-                                    <div *ngFor="let j of emailFormArray;">{{j}}</div>
-                                </span>
-                                <!-- <em *ngIf="validateControl('teamMember') && hasError('teamMember', 'required')">*Name is required</em> -->
-                            </div>
-                            <div class="col-3 col-sm-3">
-                                <button type="button" class="btn btn-link btn-sm" id="btn" (click)="open(content)">Select Team
-                                    Member</button>
+                    <div class="row">
+                        <div class="col-sm-10">
+                            <label for="inputTeamCaptainName">Team Member : </label>
+                            <div class="row">
+                                <div class="col-9 col-sm-9">
+                                    <span class="sp1">
+                                        <div *ngFor="let j of emailFormArray;">{{j}}</div>
+                                    </span>
+                                    <!-- <em *ngIf="validateControl('teamMember') && hasError('teamMember', 'required')">*Team Member Name is required</em> -->
+                                </div>
+                                <div class="col-3 col-sm-3">
+                                    <button type="button" class="btn btn-link btn-sm" id="btn" (click)="open(content)">Select
+                                        Team Member</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <hr class="col-10" style="border-color: rgb(141, 13, 30)">
+                    <hr class="col-10" style="border-color: rgb(141, 13, 30)">
 
-                <div class="form-group row">
-                    <div class="col-10">
-                        <input formControlName="teamVegeCount" class="form-control" type="number" id="inputVegeCount"
-                            min="0" required>
-                        <label for="inputVegeCount">Vegetarion Member :</label>
-                        <!-- <em *ngIf="validateControl('teamVegeCount') && hasError('teamVegeCount', 'required')">*Team Id is required</em> -->
+                    <div class="form-group row">
+                        <div class="col-10">
+                            <input formControlName="teamVegeCount" class="form-control" type="number" id="inputVegeCount"
+                                min="0" max="16" required>
+                            <label for="inputVegeCount">Vegetarion Member :</label>
+                            <em *ngIf="validateControl('teamVegeCount') && hasError('teamVegeCount', 'required')">*Vegetarion
+                                Member is required</em>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group row">
-                    <div class="col-10">
-                        <input formControlName="teamLiquor" class="form-control" type="number" id="inputLiquor" min="0"
-                            required>
-                        <label for="inputLiquor">Liquor :</label>
-                        <!-- <em *ngIf="validateControl('teamLiquor') && hasError('teamLiquor', 'required')">*Team Id is required</em> -->
+                    <div class="form-group row">
+                        <div class="col-10">
+                            <input formControlName="teamLiquor" class="form-control" type="number" id="inputLiquor" min="0"
+                                max="16" required>
+                            <label for="inputLiquor">Liquor :</label>
+                            <em *ngIf="validateControl('teamLiquor') && hasError('teamLiquor', 'required')">*Liquor is
+                                required</em>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group row">
-                    <div class="col-10">
-                        <textarea formControlName="discription" class="form-control rounded-0" id="FormTextarea"
-                            placeholder="Enter Something....." rows="3" required></textarea>
-                        <!-- <label for="FormTextarea">Enter Something.....</label> -->
+                    <div class="form-group row">
+                        <div class="col-10">
+                            <textarea formControlName="discription" class="form-control rounded-0" id="FormTextarea"
+                                placeholder="Enter Something....." rows="3" required></textarea>
+                        </div>
                     </div>
-                </div>
 
-                <br><br>
-                <div class="row">
-                    <div class="col-5"></div>
-                    <div class="col-2">
-                        <button type="submit" id="btn-sub" (click)="myFunc()" class="btn btn-outline-danger" [disabled]="!teamForm.valid">Submit</button>
+                    <br><br>
+                    <div class="row">
+                        <div class="col-5"></div>
+                        <div class="col-2">
+                            <button type="submit" id="btn-sub" (click)="myFunc()" class="btn btn-outline-danger"
+                                [disabled]="!teamForm.valid">Submit</button>
+                        </div>
+                        <div class="col-5"></div>
                     </div>
-                    <div class="col-5"></div>
+
+                </form>
+                <!-- End Form -->
+
+                <div id="formFooter">
+                    <a id="crateAccountlink" class="underlineHover"></a>
                 </div>
 
-            </form>
-            <!-- End Form -->
-
-            <div id="formFooter">
-                <a id="crateAccountlink" class="underlineHover"></a>
             </div>
-
         </div>
     </div>
 
@@ -139,7 +145,7 @@
 
 <!-- Get Captain  -->
 <ng-template #content2 let-c="close" let-d="dismiss">
-    
+
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Employee list</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
