--- a/src/app/events/view-event-page/view-event-page.component.css
+++ b/src/app/events/view-event-page/view-event-page.component.css
@@ -18,7 +18,15 @@
  #dis{
      padding-left: 20px
  }
-
+#h1{
+    position: relative;
+    left: 5%;
+}
+#h2{
+    text-align: right;
+    position: relative;
+    right: 5%;
+}
 
 
 
