--- a/src/app/task/viewcontacts/viewcontacts.component.html
+++ b/src/app/task/viewcontacts/viewcontacts.component.html
@@ -14,6 +14,6 @@
 <td>{{i.number1}}</td>
 <td>{{i.number2}}</td>
 <td> <button type="button" class="btn btn-success" (click)="deleteDetail(i.contactDetailId)"> Delete</button>  </td>
-<td> <button type="button" class="btn btn-success" (click)="updateDetail(i.contactDetailId)"> Update</button></td>
+<!-- <td> <button type="button" class="btn btn-success" (click)="updateDetail(i.contactDetailId)"> Update</button></td> -->
 </tr>
   </table>
