--- a/src/app/task/view-task-info/view-task-info.component.html
+++ b/src/app/task/view-task-info/view-task-info.component.html
@@ -1,4 +1,4 @@
-
+<app-nav-bar></app-nav-bar>
 <div class="row">
     <div class="col-sm-4">
       <div class="card">
@@ -22,7 +22,7 @@
 </div>
     </div>
 
-    <div class="col-sm-8">
+    <!-- <div class="col-sm-8">
         <div class="card">
       <div class="card-body">
         <h5 class="card-title">Entered Contact Details</h5>
@@ -51,5 +51,5 @@
   
   </div>
     </div>
-    </div>
+    </div> -->
   </div>
