--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -41,7 +41,7 @@
           </div>
           <div class="col-md-6">
             <div class="card-img-bottom" id="division">
-                <img class="card-img " id="image" style="width: 100%; height: 450px;"src="assets/_image/trip.jpg">
+                <img class="card-img " id="image" style="width: 100%; height: 450px;"[src]="ImageUrl+event.eventImageUrl">
 
             </div>
           </div>
@@ -62,8 +62,9 @@
       </div>
       <div class="col-sm-1">
           <button type="button" class="btn btn-link"(click)="updateEvent()">Update Event</button>
-          <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button>
+          <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button> -->
           <button type="button" class="btn btn-link" (click)="viewEmployee()">View Registered Employees</button>
+          <button type="button" class="btn btn-link" (click)="registerEmployee()">Add Registered Employees</button>
         </div>
 </div>
 <br/><br/>
