--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -51,7 +51,7 @@
       </div>
       <div class="col-sm-1">
           <button type="button" class="btn btn-link"(click)="updateEvent()">Update Event</button>
-          <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button>
+         <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button>-->
           <button type="button" class="btn btn-link" (click)="viewEmployee()">View Registered Employees</button>
         </div>
 </div>
