--- a/src/app/profile/Employee/change-position/change-position.component.html
+++ b/src/app/profile/Employee/change-position/change-position.component.html
@@ -56,7 +56,7 @@
                     {{i.projectName}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
-                    <a  *ngFor="let p of projects" class="dropdown-item" (click)="changedetails(i.empEmail,'','',p.prId)"> {{p.projectName}}</a>
+                    <a  *ngFor="let p of projects" class="dropdown-item" (click)="changedetails(i.id,i.empEmail,'','',p.prId)"> {{p.projectName}}</a>
                   
                   </div>
                 </div>
@@ -68,7 +68,7 @@
                     {{i.empPosition}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
-                    <a  *ngFor="let p of position" class="dropdown-item" (click)="changedetails(i.empEmail,p.positionId,'','')"> {{p.positionName}}</a>
+                    <a  *ngFor="let p of position" class="dropdown-item" (click)="changedetails(i.id,i.empEmail,p.positionId,'','')"> {{p.positionName}}</a>
                   
                   </div>
                 </div>
@@ -80,13 +80,13 @@
                     {{i.empDepartment}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
-                    <a  *ngFor="let d of departments" class="dropdown-item" (click)="changedetails(i.empEmail,'',d.dprtId,'')"> {{d.dprtName}}</a>
+                    <a  *ngFor="let d of departments" class="dropdown-item" (click)="changedetails(i.id,i.empEmail,'',d.dprtId,'')"> {{d.dprtName}}</a>
                   
                   </div>
                 </div>
                </td>
-               <td id="btn" *ngIf="(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn btn-secondary " (click)=statechange(i.empEmail,0)>For Deactive</button></td>
-               <td id="btn" *ngIf="!(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn btn-secondary" (click)=statechange(i.empEmail,1)>For Active</button></td>
+               <td id="btn" *ngIf="(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn btn-secondary " (click)=statechange(i.empEmail,0,i.id)>For Deactive</button></td>
+               <td id="btn" *ngIf="!(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn btn-secondary" (click)=statechange(i.empEmail,1,i.id)>For Active</button></td>
                <td id="btn" *ngIf="(Loading==i.empEmail)"><div ><img id="loadImage" style=" width : 25px;" class="card-img-top" src="assets/loading1.gif" alt="Cinque Terre" ></div>
        
               
