--- a/src/app/profile/Employee/show-employees-details/show-employees-details.component.html
+++ b/src/app/profile/Employee/show-employees-details/show-employees-details.component.html
@@ -1,5 +1,6 @@
 <app-nav-bar></app-nav-bar>
 <br>
+
         <br>
 <div class="col-md-10 col-lg-8 col-sm-12 container">
     <div class="row">
@@ -92,20 +93,27 @@
                   <div class="col-md-8">
                       <h4> <h2 id="Name"> {{i.empName}}</h2><span>  </span></h4>
                   </div>
-                  <div class="col-md-2">
+                  <div class="col-md-2"> 
                       <!-- <td id="zoom3" ><button type="button" id="details" class="btn  btn-default" (click)=detailsemployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/details.png" alt="Cinque Terre" ></button></td>
                       <td id="zoom3" ><button type="button" id="update" class="btn  btn-success" (click)=updateEmployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/edit.png" alt="Cinque Terre" ></button></td>
                       <td id="zoom3" *ngIf="isAdmin"><button type="button" id="delete" class="btn  btn-danger" (click)=deActiveEmployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/delete.png" alt="Cinque Terre" ></button></td>
                     -->
-                    <div id="Project" class="col-md-6"> <h4  id="zoom3">{{i.projectName}}</h4> </div>
+                    <div id="Project" class="col-md-6"><br> <h4  id="zoom3">{{i.projectName}}</h4>
+                        
+                    </div>
+                    
                   </div>
                  
               </div>
 
            
             <div class="row">
-                <div class="col-md-6">  <h6 id="Email"> {{i.empEmail}}</h6>  <p id="Address">{{i.empAddress1}} {{i.empAddress2}}</p>  </div>
-                
+                <div class="col-md-6">  <h6 id="Email"> {{i.empEmail}}</h6>  <p id="Address">{{i.empAddress1}} {{i.empAddress2}}</p> 
+                    <a *ngIf="!(clickId==i.id)"  (click)="getId(i.id)"  href="void:;">take special notification</a>
+                    <a *ngIf="(clickId==i.id)"  (click)="send()"  href="void:;">Send</a>
+                    <input *ngIf="clickId==i.id" (keyup)="onKey($event.target.value)">
+                 </div>
+               
             </div>
           </div>
           
@@ -121,13 +129,7 @@
       <hr class="new1">
 
     
-
-
-    
-     
-
-    
     
     </div>
-   
-  
+    
+        
