--- a/src/app/profile/Employee/employee-details/employee-details.component.css
+++ b/src/app/profile/Employee/employee-details/employee-details.component.css
@@ -1,6 +1,24 @@
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('../../../../assets/Back/back6.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    height: 100%;
+  }
+
+
 img {width: 100px;}
 section #formA{
-    background: rgb(255, 255, 251);  /* fallback for old browsers */
+    background: rgba(255, 255, 251, 0.733);  /* fallback for old browsers */
     
 }
 section h2{
@@ -18,7 +36,7 @@ section h3{
     padding-bottom: 20px;
 }
 #sideA{
-    background-color: rgb(176, 14, 35);
+    background-color: rgba(176, 14, 36, 0.856);
 }
 em{
     color: rgb(176, 14, 35);
