--- a/src/app/profile/Employee/employee-details/employee-details.component.html
+++ b/src/app/profile/Employee/employee-details/employee-details.component.html
@@ -1,7 +1,10 @@
 <app-nav-bar></app-nav-bar>
+<div id="background">
+        <div id="backgroundIN">
+
 
  <section class="testimonial py-5 container " id="testimonial">
-    <div class="container card">
+    <div class="container ">
         <div class="row ">
             <div class="col-md-4 py-5 text-white text-center " id="sideA">
                 <div class="sideA">
@@ -59,3 +62,5 @@
     </div>
   </section>
    
+</div>
+</div>
