--- a/src/app/profile/admin-page/admin-page.component.html
+++ b/src/app/profile/admin-page/admin-page.component.html
@@ -1,4 +1,8 @@
 <app-nav-bar></app-nav-bar>
+<div id="background">
+    <div id="backgroundIN">
+
+
 
 <div class="form-row">
   
@@ -71,4 +75,7 @@
     </div>
   </div>
 
+</div>
+
+</div>
 </div>
