--- a/src/app/profile/Employee/change-position/change-position.component.css
+++ b/src/app/profile/Employee/change-position/change-position.component.css
@@ -1,7 +1,32 @@
+
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('../../../../assets/Back/back2.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+  }
+  #filter{
+    border-radius: 10px;
+  }
 .dropdown-menu{
     background-color: rgb(177, 177, 180);
     z-index: +1;
 }
 button{
     z-index: -1;
+}
+
+.btn:hover{
+    background-color: rgb(182, 182, 182);
+    transform: scale(1.05);
 }
