--- a/src/app/profile/Employee/change-position/change-position.component.html
+++ b/src/app/profile/Employee/change-position/change-position.component.html
@@ -1,7 +1,8 @@
 <app-nav-bar></app-nav-bar>
+<div id="background">
+    <div id="backgroundIN">
 
-
-    <div class="col-md-10 container">
+    <div class="col-md-10 container" *ngIf="result" >
     	<div class="row">
 			<div class="col-md-12">
 				<div class="tableWithHeader ">
@@ -11,18 +12,16 @@
           </div>
           <div class="row">
               <div class="col-md-4">       
-               <input [(ngModel)]="filtertext"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Name" />
-
+               <input [(ngModel)]="filtertext"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Name" required/>
+               <label>Search by Name:</label>
             </div>
             <div class="col-md-4">       
-                <input [(ngModel)]="filterposition"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Position" />
-             </div>
+                <input [(ngModel)]="filterposition"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Position"required />
+                <label>Search by Position:</label>
+              </div>
              <div class="col-md-4">       
-                <input [(ngModel)]="filterproject"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Project" />
-                <!-- <select class="form-control" formControlName="role" placeholder="Roles" id="role" >
-                    <option value="" selected disabled hidden> All Project </option>
-                    <option [(ngModel)]="filterproject"  [value]="p.projectName" *ngFor="let p of projects">{{p.projectName}}</option>
-                </select> -->
+                <input [(ngModel)]="filterproject"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Project" required />
+                <label>Search by Project:</label>
               </div>
 					<div class="panel-body">
               <div class=" input-group mb-3" [class.error]="isNotEmail">
@@ -52,7 +51,7 @@
               <td>{{i.empEmail}}</td>
               <td>
                 <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{i.projectName}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
@@ -64,7 +63,7 @@
              
                <td>
                 <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{i.empPosition}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
@@ -76,7 +75,7 @@
 
                <td>
                 <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{i.empDepartment}}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
@@ -85,12 +84,12 @@
                   </div>
                 </div>
                </td>
-               <td id="btn" *ngIf="(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn btn-secondary " (click)=statechange(i.empEmail,0,i.id)>For Deactive</button></td>
-               <td id="btn" *ngIf="!(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn btn-secondary" (click)=statechange(i.empEmail,1,i.id)>For Active</button></td>
+               <td id="btn" *ngIf="(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn  " (click)=statechange(i.empEmail,0,i.id)>For Deactive</button></td>
+               <td id="btn" *ngIf="!(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn " (click)=statechange(i.empEmail,1,i.id)>For Active</button></td>
                <td id="btn" *ngIf="(Loading==i.empEmail)"><div ><img id="loadImage" style=" width : 25px;" class="card-img-top" src="assets/loading1.gif" alt="Cinque Terre" ></div>
        
               
-              <td id="zoom3" ><button type="button" id="details" class="btn  btn-default" (click)=detailsemployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/details.png" alt="Cinque Terre" ></button></td>
+              <td id="zoom3" ><button type="button" id="details" class="btn " (click)=detailsemployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/details.png" alt="Cinque Terre" ></button></td>
                     <td id="btn" id="zoom3" ><button type="button" id="update" class="btn  btn-success" (click)=updateEmployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/edit.png" alt="Cinque Terre" ></button></td>
                    
              
@@ -105,4 +104,9 @@
     
    <div>
  
+    <div id="load" class="row " *ngIf="!result">
+      <img  class="card-img-top" src="assets/loading.gif" alt="Cinque Terre" >
+    </div>
 
+  </div>
+</div>
