--- a/src/app/profile/Employee/employee-profile/employee-profile.component.css
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.css
@@ -1,56 +1,30 @@
-/* img {width: 100px;}
-section #formA{
-    background: rgb(212, 212, 211); 
-    background: -webkit-linear-gradient(to bottom, rgb(136, 135, 134),rgb(212, 212, 211)); 
-    background: linear-gradient(to bottom, rgb(136, 135, 134),rgb(212, 212, 211)); 
-   
+#background{
+  
+  top: 0;
+  left: 0;
+  background-image: url('../../../../assets/Back/back6.jpg');
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-section h2{
-    color: white;
-    font-size: 25px;
-    text-align: center;
-    padding-bottom: 20px;
+#backgroundIN{
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
 }
 
-section h3{
-    color: rgba(185, 7, 7);
-    font-size: 40px;
-    text-align: center;
-    font-weight: bold;
-    padding-bottom: 20px;
-}
-#sideA{
-    background-color: rgba(185, 7, 7, 0.8);
-}
-em{
-    color: red;
-} */
  #back{
-    background-color: rgb(176, 14, 35);
+    background-color: rgba(176, 14, 36, 0.884);
       height: 50%;
   }
   #part0{
-    background-color: rgb(176, 14, 35);
+    background-color: rgba(176, 14, 36, 0.877);
 
   } 
 
-  
 
-  /* @import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800");
-* {
-  box-sizing: border-box;
-} */
-
-
-
-
-
-
-
-
-
-
-/*newwwwwwwwwwwwwwwwwwww*/
 html,
 body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
