--- a/src/app/profile/Employee/employee-profile/employee-profile.component.html
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.html
@@ -1,100 +1,14 @@
 <app-nav-bar></app-nav-bar>
-<!-- <section class="testimonial py-5 container" id="testimonial">
-    <div class="container">
-        <div class="row ">
-            <div class="col-md-4 py-5 text-white text-center " id="sideA">
-                <div class="sideA">
-                    <div class="card-body">
-                        <img [src]="ProfileImage" style="width:70%">
-                        
-                        <h2 class="py-3">{{result.empName}}</h2>
-                        <p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.
-  
-  </p>
-                    </div>
-                </div>
-            </div>
-  
-  
-            <div class="col-md-8 py-5 border" id="formA">
-                <h3 class="pb-4">Profile Details</h3>
-               
-                <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Full Name:</h4></div>
-                    <div class="form-group col-md-9"><h4>{{result.empName}}</h4></div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Company Id:</h4></div>
-                    <div class="form-group col-md-9"><h4>{{result.empId}}</h4></div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Email:</h4></div>
-                    <div class="form-group col-md-9"><h4>{{result.empEmail}}</h4></div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Department:</h4></div>
-                    <div class="form-group col-md-9"><h4>{{result.empDepartment}}</h4></div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Posiion:</h4></div>
-                    <div class="form-group col-md-9"><h4>{{result.empPosition}}</h4></div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3"><h4>Gender:</h4></div>
-                    <div class="form-group col-md-9"><h4>{{result.empGender}}</h4></div>
-                </div>
-              
-               
-            </div>
-        </div>
-    </div>
-  </section>
-   -->
-   
-   <!-- <div class="row">
-    <div class="col-8">
-
-        <div class="container">
-            <h3></h3>
-                <div class="row">
-                  <div class="col-4">
-                    <img [src]="ProfileImage" style="width:70%" class="rounded-circle">
-                  </div>
-                  <div class="col-8">
-                    <h3>{{result.empName}}</h3><br><br>
-                    <h5>{{result.empPosition}}</h5>
-                    <h5>{{result.empEmail}}</h5>
-                    <h5>{{result.empDepartment}}</h5> 
-                  </div>
-                  
-                </div>
-        </div>
-
-            </div>
-            <div class="col-3">
-                <h3>Our Team</h3>
-                    <div class="list">
-                             <ul>
-                              <li>
-                                    <img [src]="ProfileImage" style="width:20%" class="rounded-circle">
-                                    <a href="#">{{result.empName}}</a></li>
-                              
-                             </ul>
-                              
-                            
-                          </div>
-                    </div>
-
-             
-                </div> -->
+<div id="background">
+        <div id="backgroundIN">
                 
-                <div class="row ">
+                <div class="row " *ngIf="result">
                     <main role="main" class="container">
                         <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" id="part0">
                           <img [src]="ProfileImage"  id="zoom3" height="200em" width="200em" alt="User Icon" class="rounded-circle margin-left ml-2">
                          
                           <div class="lh-100">
-                            <h5 class="mb-0 text-white lh-100">{{result.empName}} </h5>
+                            <h5 class="mb-0 text-white lh-100" >{{result.empName}} </h5>
                             <h5 class="mb-0 text-white lh-100"> <small (click)=updateprofile(result.empId) id="update" style="position:absolute; right:15%"> update
                                <br><small (click)=changepassword(result.empEmail)> change Password</small></small> 
                           </h5>
@@ -103,7 +17,7 @@
                             <table class="cntent">
                                 <tr>
                                     <td><img src="assets/email.png" class="icon" width="25" height="25"></td>
-                                    <td class="pl-3"><h6 class="text-white lh-100">{{result.empEmail}}</h6></td>
+                                    <td class="pl-3"><h6 class="text-white lh-100">{{result.empEmail  }}</h6></td>
                                 </tr>
                                 <tr>
                                     <td><img src="assets/_image/project.png" class="icon" width="25" height="25"></td>
@@ -169,6 +83,10 @@
                   
                 </div>
 
+                <div id="load" class="row " *ngIf="!result">
+                  <img  class="card-img-top" src="assets/loading.gif" alt="Cinque Terre" >
+                </div>
 
 
-   
+   </div>
+   </div>
