--- a/src/app/profile/Employee/show-employees-details/show-employees-details.component.css
+++ b/src/app/profile/Employee/show-employees-details/show-employees-details.component.css
@@ -1,3 +1,22 @@
+#background{
+  
+  top: 0;
+  left: 0;
+  background-image: url('../../../../assets/Back/back2.jpg');
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#backgroundIN{
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 100%;
+  height: 100%;
+}
+#filter{
+  border-radius: 10px;
+}
 #schedule .tab-pane {
   transition: ease-in-out .2s;
 }
