--- a/src/app/profile/admin-page/admin-page.component.css
+++ b/src/app/profile/admin-page/admin-page.component.css
@@ -1,3 +1,20 @@
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('../../../assets/Back/back4.png');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    height: 100%;
+  }
+
 #btn{
     background-color: rgb(176, 14, 35);
 }
@@ -7,17 +24,17 @@ h2{
 }
 #showview{
 padding: 20px;
-background-color: rgba(198, 201, 201, 0.8); /* fallback for old browsers */
+background-color: rgba(198, 201, 201, 0.493); /* fallback for old browsers */
 min-height: 40em;
    
 }
 #createview{
-    background: rgb(212, 212, 211);  /* fallback for old browsers */
+    background: rgba(212, 212, 211, 0.445);  /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom, rgb(136, 135, 134),rgb(212, 212, 211));  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, rgb(136, 135, 134),rgb(212, 212, 211)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    
 }
 
 .card{
-    background-color: rgba(196, 199, 199, 0.8);
+    background-color: rgba(196, 199, 199, 0.349);
 }
