--- a/src/app/shared-module/nav-bar/nav-bar.component.css
+++ b/src/app/shared-module/nav-bar/nav-bar.component.css
@@ -1,3 +1,48 @@
+
+
+#notification{
+    width: 240px;
+    background-color: rgba(245, 69, 63, 0.911)
+}
+#imgnotification{
+    width: 20px;
+    height: 20px;
+    transition: .5s all ease-in-out;
+}
+#date{
+    position: relative;
+    top: 5%;
+    right: -60%;
+}
+#data{
+    position: relative;
+    top: 2%;
+    right: -1%;
+}
+#imgnotification:hover{
+    width: 25px;
+    height: 25px;
+}
+ .badge {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    padding: 5px 10px;
+    border-radius: 50%;
+    background: rgb(255, 135, 135);
+    color: white;
+  }
+
+
+#notification p{
+    font-size: 80%;
+   
+}
+#notidiv:hover{
+    background-color: rgb(255, 135, 135);
+}
+
+
 #navBar{
     position: sticky;
     top: 0;
@@ -33,3 +78,123 @@ height: 45px;
 .x{
     margin-left: 75%
 }
+
+/******************************************************************************************************/
+
+#dropdown{
+    margin: 0px;
+    background-color: #0000008e;
+}
+#dropdowntab:hover{
+    background-color: #3e3e3e;
+    margin: 0;
+}
+.toast__container {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.toast__cell{
+  display:inline-block;
+}
+
+.add-margin{
+  margin-top:0px;
+}
+
+.toast__svg{
+  fill:#000000;
+}
+
+.toast {
+  text-align:left;
+    padding: 21px 0;
+    background-color:rgb(212, 212, 212);
+    border-radius:4px;
+    max-width: 500px;
+    top: 0px;
+    position:relative;
+    box-shadow: 1px 7px 14px -5px rgba(0,0,0,0.2);
+    margin: 0;
+}
+.toast:hover{
+    background-color:rgb(175, 174, 174);
+}
+
+
+.toast:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 4px;
+    height: 100%;
+  border-top-left-radius:4px;
+  border-bottom-left-radius: 4px;
+
+}
+
+.toast__icon{
+  position:absolute;
+  top:50%;
+  left:10px;
+  transform:translateY(-50%);
+  width:20px;
+  height:20px;
+  padding: 7px;
+  border-radius:50%;
+  display:inline-block;
+}
+
+.toast__type {
+  color: #585858;
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 2px;
+}
+
+.toast__message {
+    font-size: 14px;
+    margin-top: 0;
+  margin-bottom: 0;
+    color: #5e5c5c;
+}
+.toast__message1 {
+    font-size: 10px;
+    margin-top: 0;
+  margin-bottom: 0;
+    color: #757575;
+}
+.toast__content{
+  padding-left:50px;
+  padding-right:50px;
+}
+
+.toast__close {
+    position: absolute;
+    right: 22px;
+    top: 50%;
+    width: 14px;
+    cursor:pointer;
+    height: 14px;
+  fill:#878787;
+    transform: translateY(-50%);
+}
+
+.toast__close:hover {
+   
+    height: 16px;
+  fill:#585757;
+ 
+}
+
+.toast--blue .toast__icon{
+  background-color:rgb(176, 14, 35);
+}
+
+.toast--blue:before{
+  background-color:rgb(176, 14, 35);
+}
+
+/***********************************************************************************//*********/
