--- a/src/app/events/event-home-page/event-home-page.component.html
+++ b/src/app/events/event-home-page/event-home-page.component.html
@@ -73,7 +73,7 @@
         <div class="card mb-5" style="width: 16rem;">
           <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title"><br/>Previous Evenst</h5>
+            <h5 class="card-title"><br/>Previous Events</h5>
            
           </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="card mb-5" style="width: 16rem;">
               <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title"><br/>Create Event</h5>
+                <h5 class="card-title"><br/>Create A Event</h5>
                
                 
                
