--- a/src/app/pastevent/imageview/imageview.component.css
+++ b/src/app/pastevent/imageview/imageview.component.css
@@ -75,7 +75,12 @@
   font-style: italic;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-#x{
-opacity: 100%;
 
-}
+
+#x{
+  opacity: 0%;
+  background-color: rgba(255, 0, 0, 0.034);
+  
+  width: 500px;
+  
+  }
